<resources>
    <string name="app_name">PE-HAQUAPP</string>
    <string name="the_logo_of_the_company">The logo of the company</string>
    <string name="email_address">E-mail cim</string>
    <string name="passwd">Jelszo</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="main_page">Főoldal</string>
    <string name="logout">Kijelentkezés</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="name">Név, mit csináltatok?</string>
    <string name="city">Város</string>
    <string name="street">Utca</string>
    <string name="houseNum">Házszám</string>
    <string name="startLabel">Kezdés:</string>
    <string name="endLabel">Vége:</string>
    <string name="endDateDescription">Munkavégzés végének dátumát kiválasztó gomb!</string>
    <string name="backToPrev">Vissza az előző oldalra!</string>
    <string name="startDateDescription">Munkavégzés kezdetének dátumát kiválasztó gomb!</string>
    <string name="completed">Teljesítve</string>
    <string name="save">Mentés</string>
    <string name="empty" />
    <string name="settings">Beállítások</string>
    <string name="createWork">Munka létrehozása</string>
    <string name="filterByDate">Dátum szerinti szűrés</string>
    <string name="delete">Törlés</string>
    <string name="finished_works">Befejezett munkák</string>
    <string name="today_works">Mai munkák</string>
    <string name="future_works">Jövőbeli munkák</string>
    <string name="unfinished_works">Be nem fejezett munkák</string>
    <string-array name="joblist">
        <item>Duguláselhárítás, csatornatisztítás</item>
        <item>Duguláselhárítás, csatornatisztítás, kamerázás</item>
        <item>Csőtörés javítás</item>
        <item>Kereszteződés csere</item>
        <item>Csapcsere</item>
        <item>WC tartály csere</item>
        <item>Fürdőszoba felújítás</item>
        <item>Szennyvíz szippantás</item>
        <item>Gépi földmunka</item>
    </string-array>
</resources>