<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controller.ShowWorkActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainToolBar"
            android:elevation="4dp"
            android:background="@color/company"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/backButton"
                android:onClick="back"
                android:background="@color/company"
                android:src="@drawable/baseline_arrow_back_24"
                android:contentDescription="@string/backToPrev"/>
        </androidx.appcompat.widget.Toolbar>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/workName"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/mainToolBar"
            android:hint="@string/name"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/city"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/workName"
            android:hint="@string/city"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:layout_marginTop="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/street"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/city"
            android:hint="@string/street"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:layout_marginTop="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/houseNumber"
            app:layout_constraintTop_toBottomOf="@+id/street"
            android:hint="@string/houseNum"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:layout_marginTop="5dp"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startDateCalenderButton"
            android:onClick="openStartDatePicker"
            android:src="@drawable/baseline_calendar_month_24"
            android:backgroundTint="@color/black"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/houseNumber"
            android:contentDescription="@string/startDateDescription"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startDateTextView"
            android:text="@string/startLabel"
            app:layout_constraintTop_toBottomOf="@id/houseNumber"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="25sp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endDateCalenderButton"
            android:onClick="openEndDatePicker"
            android:src="@drawable/baseline_calendar_month_24"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/endDateDescription"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startDateCalenderButton"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endDateTextView"
            android:text="@string/endLabel"
            app:layout_constraintTop_toBottomOf="@id/startDateCalenderButton"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="25sp"
            android:textColor="@color/text"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/completeCheckBox"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/endDateTextView"
            android:text="@string/completed"
            android:textSize="25sp"
            android:textColor="@color/text"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/completeCheckBox"
            android:text="@string/empty"
            android:textColor="@color/error"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="create"
            app:layout_constraintTop_toBottomOf="@id/error"
            app:layout_constraintLeft_toLeftOf="parent"
            android:backgroundTint="@color/company"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>