<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.MainActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:contentDescription="@string/the_logo_of_the_company"
            android:scaleType="fitXY"
            android:src="@drawable/pehaqua"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="1dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:id="@+id/loginText"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:layout_marginTop="5dp"
            android:textSize="30sp"
            android:textColor="@color/company"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/loginText"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/input"
            android:textColorHint="@color/input"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="25sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/passwd"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/email"
            android:textColor="@color/input"
            android:textColorHint="@color/input"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/error"
            android:text="ss"
            android:textAlignment="center"
            android:id="@+id/error"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/password"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_button"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@+id/error"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/company"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:onClick="login"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>